--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="upperSection">
         <div class="panel" id="leftPanel">
             <div class="panel_controlElement" id="difficultySetting">
-                <div class="button" id='normal' onclick="game.setDifficulty('normal')   ">Adult</div>
-                <div class="button" id='baby'   onclick="game.setDifficulty('baby')     ">Juvenile</div>
-                <div class="button" id='dont'   onclick="game.setDifficulty('dont')     ">Hatchling</div>
+                <div class="button" id='normal' onclick="game.setDifficulty('normal')   ">Normal</div>
+                <div class="button" id='baby'   onclick="game.setDifficulty('baby')     ">Easy</div>
+                <div class="button" id='dont'   onclick="game.setDifficulty('dont')     ">Larva</div>
             </div>
         </div>
         <div class="pen"></div>
