--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
         }
     </style>
 </head>
-<body onload="game.newGame()">
+<body>
+    <div class="modal" id="instructions">
+        Select a difficulty. <br>
+        Arrow keys to maneuver.<br>
+        [Enter] to Start/Pause.<br>
+        'Special treat'<br>every 10th chow.<br>
+        <div class="button" onclick="modal.dismiss()">OKAY</div>
+    </div>
     <div class="upperSection">
         <div class="panel" id="leftPanel">
             <div class="panel_controlElement" id="difficultySetting">
                 <div class="button" id='normal' onclick="game.setDifficulty('normal')   ">Normal</div>
-                <div class="button" id='baby'   onclick="game.setDifficulty('baby')     ">Easy</div>
-                <div class="button" id='dont'   onclick="game.setDifficulty('dont')     ">Larva</div>
+                <div class="button" id='easy'   onclick="game.setDifficulty('easy')     ">Easy</div>
+                <div class="button" id='larva'   onclick="game.setDifficulty('larva')     ">Larva</div>
             </div>
         </div>
         <div class="pen"></div>
