--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
     </div>
     <div class="upperSection">
         <div class="panel" id="leftPanel">
-            <div class="panel_controlElement" id="difficultySetting">
+            <div class="panel__controlElement" id="difficultySetting">
                 <div class="button" id='normal' onclick="game.setDifficulty('normal')   ">Normal</div>
                 <div class="button" id='easy'   onclick="game.setDifficulty('easy')     ">Easy</div>
                 <div class="button" id='larva'   onclick="game.setDifficulty('larva')     ">Larva</div>
             </div>
         </div>
         <div class="pen"></div>
-        <div class="panel" id="rightPanel"></div>
+        <div class="panel" id="rightPanel">
+            <div class="panel__controlElement">
+                <div class="button" id='sound' onclick="sounds.toggleSound()">Sounds</div>
+            </div>
+        </div>
     </div>
     <div class="lowerSection">
         <div class="control">
