--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         }
     </style>
 </head>
-<body onload="instructionsModal.display()">
-    <div class="modal" id="pause">Paused</div>
-    <div class="modal" id="instructions">
+<body onload="modal.display('intro')">
+    <div class="modal" id="modal"></div>
+    <!-- <div class="modal" id="instructions">
         Select a difficulty. <br>
         <span class="highlightedText">Arrow keys</span> to maneuver.<br>
         <span class="highlightedText">[Enter]</span> to Start/Pause.<br>
         'Special treat'<br>every 10th chow.<br>
-        <div class="button" onclick="instructionsModal.dismiss()">OKAY</div>
-    </div>
+        <div class="button" onclick="modal.dismiss()">OKAY</div>
+    </div> -->
     <div class="upperSection">
         <div class="panel" id="leftPanel">
             <div class="panel__controlElement" id="difficultySetting">
