--- a/index.html
+++ b/index.html
@@ -15,14 +15,7 @@
     </style>
 </head>
 <body onload="modal.display('intro')">
-    <div class="modal" id="modal"></div>
-    <!-- <div class="modal" id="instructions">
-        Select a difficulty. <br>
-        <span class="highlightedText">Arrow keys</span> to maneuver.<br>
-        <span class="highlightedText">[Enter]</span> to Start/Pause.<br>
-        'Special treat'<br>every 10th chow.<br>
-        <div class="button" onclick="modal.dismiss()">OKAY</div>
-    </div> -->
+    <div class="modal"></div>
     <div class="upperSection">
         <div class="panel" id="leftPanel">
             <div class="panel__controlElement" id="difficultySetting">
@@ -35,8 +28,8 @@
         <div class="panel" id="rightPanel">
             <div class="panel__controlElement">
                 <div class="button" id='loud' onclick="sounds.setSound('loud')">Loud</div>
-                <div class="button pressedButton" id='discreet' onclick="sounds.setSound('discreet')">Discreet</div>
-                <div class="button" id='mute' onclick="sounds.setSound('mute')">Mute</div>
+                <div class="button" id='discreet' onclick="sounds.setSound('discreet')">Discreet</div>
+                <div class="button pressedButton" id='mute' onclick="sounds.setSound('mute')">Mute</div>
             </div>
         </div>
     </div>
