changed some filenames and labels

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </div>
    
     <script src="main.js"></script>
-    <script src="controls.js"></script>
+    <script src="commands.js"></script>
     <script src="render.js"></script>
     <script src="wurm.js"></script>
-    <script src="food.js"></script>
-    <script src="colors.js"></script>
+    <script src="wormFood.js"></script>
+    <script src="colorPalette.js"></script>
     <script src="sounds.js"></script>
 </body>
 </html>
