--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body onload="modal.display('intro')">
     <div class="modal"></div>
-    <div class="upperSection">
+    <div class="section upper">
         <div class="panel" id="leftPanel">
             <div class="panel__controlElement" id="difficultySetting">
                 <div class="button" id='normal' onclick="game.setDifficulty('normal')">Normal</div>
@@ -33,10 +33,18 @@
             </div>
         </div>
     </div>
-    <div class="lowerSection">
+    <div class="section lower">
         <div class="control">
             <div class="bar" id="bonusTime">
                     <div id="fill"></div>
+            </div>
+            <div class="stats">
+                <div class="stats__icon" id="generation">Gen<br>1</div>
+                <div class="stats__icon" id="heightenedSenses">     <img src="graphics/hightenedSenses_disabled.svg"></div>
+                <div class="stats__icon" id="improvedMetabolism">   <img src="graphics/improvedMetabolism_disabled.svg"></div>
+                <div class="stats__icon" id="fasterSynapses">       <img src="graphics/fasterSynapses_disabled.svg"></div>
+                <div class="stats__icon" id="toughEpiderm">         <img src="graphics/toughEpiderm_disabled.svg"></div>
+                <div class="stats__icon" id="shedding">             <img src="graphics/shedding_disabled.svg"></div>
             </div>
             <div class="numbers">
                 <div class="counter" id="multiplier"></div>
